--- a/templates/english/index.html
+++ b/templates/english/index.html
@@ -35,9 +35,6 @@
           </div>
 
           <div id="kitchen_welcome_gibaciaire" class="row">
-            <div class="col-sm-6" id="kitchen_welcome_gibaciaire_col1">
-              <img src="{{ url_for('static', filename = 'images/kitechenn.jpeg') }}" alt="Natural juices"  class="main_slide_imag img-fluid">
-            </div>
             <div class="col-sm-6 text-center" id="kitchen_welcome_gibaciaire_col2">
               <h2>WELCOME TO <span class="text-warning">GIBECIAIRE</span> <span class="text-danger">D'OR</span> ALIMENTATION</h2>
 
@@ -45,6 +42,9 @@
               At GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also chickens as well as eggs treated well and produced well for you.<br><br>
                 <span class="text-success text-uppercase h3" style="margin-left: 40px;">you're welcome</span>
               </p>
+            </div>
+            <div class="col-sm-6" id="kitchen_welcome_gibaciaire_col1">
+              <img src="{{ url_for('static', filename = 'images/kitechenn.jpeg') }}" alt="Natural juices"  class="main_slide_imag img-fluid">
             </div>
           </div>
 
@@ -79,6 +79,20 @@
             </div>
             
           </div>
+          <div id="clients_cakes_enjoy_section" >
+                <div class="clients_cakes_enjoy_section_div">
+                  <img src="{{ url_for('static', filename = 'images/enjoying1.jpg') }}">
+                </div>
+                 <div class="clients_cakes_enjoy_section_div">
+                  <img src="{{ url_for('static', filename = 'images/enjoying5.jpg') }}">
+                </div>
+                 <div class="clients_cakes_enjoy_section_div">
+                  <img src="{{ url_for('static', filename = 'images/enjoying3.jpg') }}">
+                </div>
+                 <div class="clients_cakes_enjoy_section_div">
+                  <img src="{{ url_for('static', filename = 'images/enjoying4.jpg') }}">
+                </div>
+          </div>
 
           <div id="hot_delicous_meal">
             <h4 class="text-uppercase">hot delicous meals</h4>
@@ -101,7 +115,7 @@
                 </div>
                 <div class="hot_delicous_meal_text hot_delicous_meal_indivision">
                   <h6>Greek Pizza</h6>
-                  <p>Creamy feta, salty olives, artichokes and roasted red pepper satisfied my hunger and sent my taste buds for a loop...</p>
+                  <p>Artichokes and roasted red pepper satisfied my hunger and sent my taste buds for a loop...</p>
                    <a href="tel:+243-973-615-181">Order Now</a>
                 </div>
               </div>
@@ -111,16 +125,17 @@
                 </div>
                 <div class="hot_delicous_meal_text hot_delicous_meal_indivision">
                   <h6>American Pizza</h6>
-                  <p>This Greek Pizza is amazing! Not only that, but it's also a simple dish to prepare. You may look at the directions for this pizza and wonder why ...</p>
+                  <p>This Greek Pizza is amazing! Not only that, but it's also a simple dish to prepare.</p>
                    <a href="tel:+243-973-615-181">Order Now</a>
                 </div>
               </div>
             </div>
+
             <div class="row hot_delicous_meal_rows">
                <div class="col-md-4 hot_delicous_meal_row-cols">
                  <div class="hot_delicous_meal_text hot_delicous_meal_indivision">
                   <h6>Orange Juice</h6>
-                  <p>Besides weight loss, fruit juice strengthens your immune system, aids digestion and prevents allergies & ailments from entering your system</p>
+                  <p>Fruit juice strengthens your immune system, aids digestion and prevents allergies & ailments from entering your system</p>
                    <a href="tel:+243-973-615-181">Order Now</a>
                 </div>
                  <div class="hot_delicous_meal_img hot_delicous_meal_indivision">
@@ -183,20 +198,7 @@
             </div>
             
           </div>
-          <div id="clients_cakes_enjoy_section" >
-            <div class="clients_cakes_enjoy_section_div">
-              <img src="{{ url_for('static', filename = 'images/enjoying1.jpg') }}">
-            </div>
-             <div class="clients_cakes_enjoy_section_div">
-              <img src="{{ url_for('static', filename = 'images/enjoying5.jpg') }}">
-            </div>
-             <div class="clients_cakes_enjoy_section_div">
-              <img src="{{ url_for('static', filename = 'images/enjoying3.jpg') }}">
-            </div>
-             <div class="clients_cakes_enjoy_section_div">
-              <img src="{{ url_for('static', filename = 'images/enjoying4.jpg') }}">
-            </div>
-          </div>
+      
           <div class="clear_fix"></div>
           <div id="orientations_division" class="row">
             <div class="col-md-4" id="orientations_division_col1">
