--- a/templates/english/main_content.html
+++ b/templates/english/main_content.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gibece67.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/alimentation_food.css') }}">
     
     <!-- google fonts -->
