--- a/templates/english/index.html
+++ b/templates/english/index.html
@@ -176,7 +176,7 @@
               </div>
               <div class="col-md-4 hot_delicous_meal_row-cols">
                  <div class="hot_delicous_meal_img hot_delicous_meal_indivision">
-                  <img src="{{ url_for('static', filename = 'images/HOT_DELICIOUS_DIVISION/wedding_cake.jpg') }}">
+                  <img src="{{ url_for('static', filename = 'images/HOT_DELICIOUS_DIVISION/1200px-Wedding_cake_with_pillar_supports,_2009.jpg') }}">
                 </div>
                 <div class="hot_delicous_meal_text hot_delicous_meal_indivision">
                   <h6>wedding cakes</h6>
