changing logo name to LA GIBECIAIRE D'OR

--- a/templates/admin_pages/adminpage.html
+++ b/templates/admin_pages/adminpage.html
@@ -10,12 +10,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
-    <title>Gibeciaire - Admin Dashboard</title>
+    <title>LA GIBECIAIRE DO'R -{{title}}</title>
   </head>
   <body>
           <div class="container-fluid" id="admin_head">
               <div class="text-center text-success" id="admin_headh1">
-                <h1>GIBECIARE Admin Page</h1>
+                <h1>LA GIBECIARE D'OR Admin Page</h1>
               </div>
               <div id="admin_headpart" class="text-center">
                 <h1>Update Photos for pages and view used photos</h1>
