--- a/templates/english/index.html
+++ b/templates/english/index.html
@@ -36,10 +36,10 @@
 
           <div id="kitchen_welcome_gibaciaire" class="row">
             <div class="col-sm-6 text-center" id="kitchen_welcome_gibaciaire_col2">
-              <h2>WELCOME TO <span class="text-warning">GIBECIAIRE</span> <span class="text-danger">D'OR</span> ALIMENTATION</h2>
+              <h2>WELCOME TO <span class="text-warning">LA GIBECIAIRE</span> <span class="text-danger">D'OR</span> ALIMENTATION</h2>
 
-              <p>locate in town of GOMA / NORD-KIVU, GIBECIEAIRE D'OR Alimentation is a shop in mixed service for your different ceremonies as well as your various events, with the aim of our creation which is none other than to take in the life of the citizen of GOMA and its happy surroundings by supplying them with quality cakes for their WEDDINGS, BIRTHDAYS as well as other circumstances of life requiring a special cake for the best celebration the cakes are our specialty and we are better at our genre.
-              At GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also chickens as well as eggs treated well and produced well for you.<br><br>
+              <p>locate in town of GOMA / NORD-KIVU, LA GIBECIEAIRE D'OR Alimentation is a shop in mixed service for your different ceremonies as well as your various events, with the aim of our creation which is none other than to take in the life of the citizen of GOMA and its happy surroundings by supplying them with quality cakes for their WEDDINGS, BIRTHDAYS as well as other circumstances of life requiring a special cake for the best celebration the cakes are our specialty and we are better at our genre.
+              At LA GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also chickens as well as eggs treated well and produced well for you.<br><br>
                 <span class="text-success text-uppercase h3" style="margin-left: 40px;">you're welcome</span>
               </p>
             </div>
@@ -52,7 +52,7 @@
            
             <h4 class="text-uppercase">Our Services</h4>
             <p id="first">
-            At GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also
+            At LA GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also
             chickens as well as eggs treated well and produced well for you.</p>
             <div class="row">
                 <div  class="services_divisions col-md-4">
@@ -96,7 +96,7 @@
 
           <div id="hot_delicous_meal">
             <h4 class="text-uppercase">hot delicous meals</h4>
-            <p>At GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also chickens as well as eggs treated well and produced well for you.</p>
+            <p>At LA GIBECIAIRE D'OR you will not only find cakes of your choice as well as desires but also chickens as well as eggs treated well and produced well for you.</p>
 
             <div class="row hot_delicous_meal_rows">
               <div class="col-md-4 hot_delicous_meal_row-cols">
