--- a/templates/french/main_contentfre.html
+++ b/templates/french/main_contentfre.html
@@ -16,12 +16,12 @@
   </head>
   <body>
     <div class="text-center" id="gibeciaire_start">
-      <h1>GIBECIAIRE <small>ALIMENTATION POUR VOS MEILLEUR SERVICES</small><br/><span>D'OR</span></h1>
+      <h1>LA GIBECIAIRE <small>ALIMENTATION POUR VOS MEILLEUR SERVICES</small><br/><span>D'OR</span></h1>
     </div>
    
     <header class="sticky-top">
       <nav class="navbar navbar-expand-md navbar-dark">
-       <a href="index.html" class="navbar-brand btn btn-default" id="gibeciaire_brand">Gibeciaire<br/><span >d'or</span></a>
+       <a href="index.html" class="navbar-brand btn btn-default" id="gibeciaire_brand">LA GIBECIAIRE<br/><span >D'OR</span></a>
        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#gibeciaire_collapse">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -63,8 +63,8 @@
   <footer>
         <div class="row" style="text-align: justify;">
             <div class="col-md-4">
-              <h5 class="text-uppercase">A PROPOS DE GIBECIAIRE D'OR</h5><br>
-               <p>GIBECIAIRE D'OR est un alimentation pour vente biens et services de qualite,chez nous vous y trouverez des des gateaux,des nourriture a service rapide(take a way),des jus naturel de votre choix,poules et oeufs de qualite ainsi utres choses vous sont disponible chez GIBECIAIRE....</p>
+              <h5 class="text-uppercase">A PROPOS DE LA GIBECIAIRE D'OR</h5><br>
+               <p>LA GIBECIAIRE D'OR est un alimentation pour vente biens et services de qualite,chez nous vous y trouverez des des gateaux,des nourriture a service rapide(take a way),des jus naturel de votre choix,poules et oeufs de qualite ainsi utres choses vous sont disponible chez LA GIBECIAIRE D'OR</p>
             </div>
             <div class="col-md-4">
               <h4 class="text-uppercase">Nos Services</h4><br>
@@ -84,7 +84,7 @@
             </div>
         </div>
       <div class="clear_fix"></div>
-      <p id="footer_p">Copyright &copy2019  <span class="text-success">GIBECIAIRE</span> <span class="text-danger">D'OR</span> All rights reserved</p>
+      <p id="footer_p">Copyright &copy2019  <span class="text-success">LA GIBECIAIRE</span> <span class="text-danger">D'OR</span> All rights reserved</p>
     </footer>
      
 
