--- a/templates/english/main_content.html
+++ b/templates/english/main_content.html
@@ -16,12 +16,12 @@
   </head>
   <body>
     <div class="text-center" id="gibeciaire_start">
-      <h1>GIBECIAIRE <small>ALIMENTATION POUR VOS MEILLEUR SERVICES</small><br/><span>D'OR</span></h1>
+      <h1>LA GIBECIAIRE <small>ALIMENTATION POUR VOS MEILLEUR SERVICES</small><br/><span>D'OR</span></h1>
     </div>
    
     <header class="sticky-top">
       <nav class="navbar navbar-expand-md navbar-dark">
-       <a href="index.html" class="navbar-brand btn btn-default" id="gibeciaire_brand">Gibeciaire<br/><span >d'or</span></a>
+       <a href="index.html" class="navbar-brand btn btn-default" id="gibeciaire_brand">LA GIBECIAIRE<br/><span >D'OR</span></a>
        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#gibeciaire_collapse">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -64,9 +64,9 @@
     <footer>
         <div class="row" style="text-align: justify;">
             <div class="col-md-4">
-              <h4 class="text-uppercase">ABOUT GIBECIAIRE</h4><br>
-               <p>GIBECIAIRE D'OR sells food of quality, goods and services, with us you will find cakes, quick service food (take a way), natural juices of your choice, quality hens and eggs
-               so other things are available to you at GIBECIAIRE ....</p>
+              <h4 class="text-uppercase">ABOUT LA GIBECIAIRE D'OR</h4><br>
+               <p>LA GIBECIAIRE D'OR sells food of quality, goods and services, with us you will find cakes, quick service food (take a way), natural juices of your choice, quality hens and eggs
+               so other things are available to you at LA GIBECIAIRE D'OR</p>
             </div>
             <div class="col-md-4">
               <h4 class="text-uppercase">Services</h4><br>
@@ -86,7 +86,7 @@
             </div>
         </div>
       <div class="clear_fix"></div>
-      <p id="footer_p">Copyright &copy2019  <span class="text-success">GIBECIAIRE</span> <span class="text-danger">D'OR</span> All rights reserved</p>
+      <p id="footer_p">Copyright &copy2019  <span class="text-success">LA GIBECIAIRE</span> <span class="text-danger">D'OR</span> All rights reserved</p>
     </footer>
      
 
