--- a/templates/french/indexfre.html
+++ b/templates/french/indexfre.html
@@ -36,10 +36,10 @@
 
     <div id="kitchen_welcome_gibaciaire" class="row">
       <div class="col-sm-6 text-center" id="kitchen_welcome_gibaciaire_col2">
-        <h2>BIENVENUE CHEZ<span class="text-warning">GIBECIAIRE</span> <span class="text-danger">D'OR</span> ALIMENTATION</h2>
+        <h2>BIENVENUE CHEZ<span class="text-warning"> LA GIBECIAIRE</span> <span class="text-danger">D'OR</span> ALIMENTATION</h2>
 
         <p>
-          situer en ville de GOMA/NORD-KIVU,GIBECIEAIRE D'OR Alimentation est un shop en service mixte pour vos differents ceremonie ainsi que vos differentes manifestations,dans le but de notre creation qui n est autre que de rentre la vie des citoyen de GOMA et ses environs heureux en leur vournissant des gateaux de qualite pour leurs MARIAGEs,ANNIVERSAIRES ainsi que d'autres circonstance des la vie necessitant un special gateaux pour la meilleur celebration les gateaux sont notres specialite et de la nous sommes meilleur a notre genre.  Chez GIBECIAIRE D'OR vous trouverez non seulement des gateaux de votre choix ainsi que desirs mais aussi des poules ainsi que des oeufs bien traiter et bien produit pour vous.<br><br>
+          situer en ville de GOMA/NORD-KIVU,LA GIBECIEAIRE D'OR Alimentation est un shop en service mixte pour vos differents ceremonie ainsi que vos differentes manifestations,dans le but de notre creation qui n est autre que de rentre la vie des citoyen de GOMA et ses environs heureux en leur vournissant des gateaux de qualite pour leurs MARIAGEs,ANNIVERSAIRES ainsi que d'autres circonstance des la vie necessitant un special gateaux pour la meilleur celebration les gateaux sont notres specialite et de la nous sommes meilleur a notre genre.  Chez GIBECIAIRE D'OR vous trouverez non seulement des gateaux de votre choix ainsi que desirs mais aussi des poules ainsi que des oeufs bien traiter et bien produit pour vous.<br><br>
           <span class="text-success h3">BIENVENUE CHEZ NOUS</span>
         </p>
       </div>
@@ -52,7 +52,7 @@
     <div id="gibeciaire_services">
      
       <h4 class="text-uppercase">NOS SERVICES</h4>
-      <p id="first">Chez GIBECIAIRE D'OR vous trouverez non seulement des gateaux de votre choix ainsi que desirs mais aussi des poules ainsi que des oeufs bien traiter et bien produit pour vous.</p>
+      <p id="first">Chez LA GIBECIAIRE D'OR vous trouverez non seulement des gateaux de votre choix ainsi que desirs mais aussi des poules ainsi que des oeufs bien traiter et bien produit pour vous.</p>
       <div class="row">
           <div  class="services_divisions col-md-4">
             <div class="services_transitions">
@@ -96,7 +96,7 @@
 
     <div id="hot_delicous_meal">
       <h4 class="text-uppercase">Nourriture Delicieux</h4>
-      <p>Chez GIBECIAIRE D'OR vous trouverez non seulement des gateaux de votre choix ainsi que desirs mais aussi des poules ainsi que des oeufs bien traiter et bien produit pour vous.</p>
+      <p>Chez LA GIBECIAIRE D'OR vous trouverez non seulement des gateaux de votre choix ainsi que desirs mais aussi des poules ainsi que des oeufs bien traiter et bien produit pour vous.</p>
 
       <div class="row hot_delicous_meal_rows">
         <div class="col-md-4 hot_delicous_meal_row-cols">
